Bug 1333162 - Only call gdk_set_program_name in the parent process. r=karlt

Differential Revision: https://phabricator.services.mozilla.com/D70640

--HG--
extra : moz-landing-system : lando